--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 <div class="page">
     <div class="header">
-        <h1>Yingchu Lo</h1>
+        <h1>Cesar Acosta</h1>
 		<span class="social_icons_wrapper">
-			<a href="https://github.com/YingchuLo" class="social-icon-link">
+			<a href="https://github.com/acostacesar" class="social-icon-link">
 				<span class="fa-stack fa-lg social-icon">
 					<i class="fa fa-circle fa-stack-2x"></i>
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 				</span>
 			</a>
-			<a href="http://linkedin.com/in/ying-chu-lo" class="social-icon-link">
+			<a href="http://linkedin.com/in/cesar-acosta" class="social-icon-link">
 				<span class="fa-stack fa-lg social-icon">
 					<i class="fa fa-circle fa-stack-2x"></i>
 					<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -36,15 +36,9 @@
     </div>
     <div class="content">
 	    <div class="intro">
-		    <p> Hi there, my name is Angela(Yingchu) Lo.
-		    I'm a Data Analyst, currently working at <a href="https://en.wikipedia.org/wiki/LAC%2BUSC_Medical_Center">LAC+USC Medical Center</a>. 
-		    <br><br>
-		    I have a MS degree in Analytics from <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering, University of Southern California</a>.
-		    I hope my visitors enjoy the content I create.
-		    Feel free to stick around and browse some of my projects or send me an email at yingchu@usc.edu.
-		    </p> 
+		    <p> Feel free to send me an email at yingchu@usc.edu. </p> 
 	    </div>
-	    <!--<img class="photo" src="image/angela.jpg" alt="Angela">-->
+	    <!--<img class="photo" src="image/angela.jpg" alt="Cesar">-->
 	    
     </div>	
 </div>
