--- a/resume.html
+++ b/resume.html
@@ -11,15 +11,15 @@
 <body>
 <div class="page">
     <div class="header">
-        <h1>Yingchu Lo</h1>
+        <h1>Cesar Acosta</h1>
 		<span class="social_icons_wrapper">
-			<a href="https://github.com/YingchuLo" class="social-icon-link">
+			<a href="https://github.com/acostacesar" class="social-icon-link">
 				<span class="fa-stack fa-lg social-icon">
 					<i class="fa fa-circle fa-stack-2x"></i>
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 				</span>
 			</a>
-			<a href="http://linkedin.com/in/ying-chu-lo" class="social-icon-link">
+			<a href="http://linkedin.com/in/cesar-acosta" class="social-icon-link">
 				<span class="fa-stack fa-lg social-icon">
 					<i class="fa fa-circle fa-stack-2x"></i>
 					<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
