--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
 	    
 	    <div class="project_description">
 		    <br></br>
-		    <p2>Click <a href="https://github.com/YingchuLo/YingchuLo.github.io/blob/master/resume/yingchu_lo.pdf">here</a> to download the resume</p2>
+		    <p2>Click <a href="https://github.com/acostacesar/cesaracosta.github.io/blob/master/resume/cv.pdf">here</a> to download the resume</p2>
 	    </div>
     </div>
 </div>
