--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <h1>Cesar Acosta</h1>
 		<span class="social_icons_wrapper">
-			<a href="https://github.com/acostacesar" class="social-icon-link">
+			<a href="https://github.com/cesar-acosta" class="social-icon-link">
 				<span class="fa-stack fa-lg social-icon">
 					<i class="fa fa-circle fa-stack-2x"></i>
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -36,7 +36,7 @@
     </div>
     <div class="content">
 	    <div class="intro">
-		    <p> Feel free to send me an email at yingchu@usc.edu. </p> 
+		    <p> Feel free to send me an email at cesar.acostamejia@gmail.com </p> 
 	    </div>
 	    <!--<img class="photo" src="image/angela.jpg" alt="Cesar">-->
 	    
